# leaflet

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  collector.py  config.py  docker-compose.yaml  docker-compose.yml  fly.toml  pyproject.toml  run.py  run_collector.py  start.sh  tailwind.config.js  tasks.py  worker.py  worker_dev.py  yoyo.ini
.github/workflows/: cron.yaml  test.yaml
alembic/: env.py
alembic/versions/: 46a92202566b_recipe_embedding_model.py  69365fb5757e_init.py  6e0e48de2429_user_prompt.py  73f9697df281_drop_shopping_list_item.py  cb0dd456e4cc_initial_migration.py
app/: __init__.py  config.py  db.py  depends.py  faqs.py  main.py  models.py  storage.py  utils.py
app/api/: __init__.py  auth.py  public.py  user.py
app/celery/: __init__.py
app/cli/: __init__.py
app/collector/: __init__.py  ingredient.py
app/database/: __init__.py
app/leaflet/: __init__.py
app/leaflet_manager/: __init__.py
app/llm/: __init__.py  image_user_prompt.jinja  schema.py  system_prompt.jinja
app/mail/: __init__.py
app/mailer/: __init__.py
app/models/: __init__.py  leaflet_entry.py  recipe.py  user.py
app/recipe_manager/: __init__.py
app/routes/: auth.py  dashboard.py  magic.py
app/session/: __init__.py
app/static/: style.css
app/tasks/: __init__.py  daily.py
app/templates/: dashboard.html  digest.html  email.html  email_magic_link.html  faq.html  field_validation.html  home.html  (+10 more)
data/: categories.json  test.txt  url.txt
etc/: litefs-web.yml  litefs-worker.yml
lib/: __init__.py  db.py  email.py  recipe.py  recipe_collector.py  result.py  runner.py  user_config.py
migrations/: 20221212_01_bTM9Y.rollback.sql  20221212_01_bTM9Y.sql  20221222_01_IfOd6.rollback.sql  20221222_01_IfOd6.sql
static/: input.css  output.css  style.css
tests/: conftest.py  llm_mock.py  test_auth.py  test_dashboard.py  test_db.py  test_leaflet_manager.py  test_magic.py  test_recipe_manager.py  test_tasks.py  test_user.py  test_worker.py
(+117 files in other folders)
