[tool.poetry]
name = "leaflet"
version = "0.1.0"
description = "Recipes cooked by llms"
authors = ["Craig Mulligan <git@craigmulligan.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.9"
openai = "^1.25.1"
requests = "^2.31.0"
pgvector = "^0.2.5"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.114"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
black = "^24.4.2"
pytest-vcr = "^1.0.2"
invoke = "^2.2.0"
pytest = "^8.2.0"
httpx = "^0.27.0"
types-mock = "^5.1.0.20240425"
types-boto3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

